--- a/style.scss
+++ b/style.scss
@@ -519,6 +519,7 @@ tbody tr:nth-child(odd) th {
 .navbar, .navbar-nav>li>a {
   background-color: white;
   font-family: 'Open Sans', sans-serif;
+  color:#273f2f;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 80%;
